// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic tests Render plain table 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:140px"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:120px"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:80px"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width:80px"
      >
        1
      </td>
      <td
        style="width:140px"
      >
        George Washington
      </td>
      <td
        style="width:120px"
      >
        No Party
      </td>
      <td
        style="width:80px"
      >
        1732
      </td>
      <td
        style="width:80px"
      >
        1799
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1789-04-30
      </td>
      <td
        style="width:80px"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        2
      </td>
      <td
        style="width:140px"
      >
        John Adams
      </td>
      <td
        style="width:120px"
      >
        Federalist
      </td>
      <td
        style="width:80px"
      >
        1735
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1797-03-04
      </td>
      <td
        style="width:80px"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        3
      </td>
      <td
        style="width:140px"
      >
        Thomas Jefferson
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1743
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1801-03-04
      </td>
      <td
        style="width:80px"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        4
      </td>
      <td
        style="width:140px"
      >
        James Madison
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1751
      </td>
      <td
        style="width:80px"
      >
        1836
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1809-03-04
      </td>
      <td
        style="width:80px"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        5
      </td>
      <td
        style="width:140px"
      >
        James Monroe
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1758
      </td>
      <td
        style="width:80px"
      >
        1831
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1817-03-04
      </td>
      <td
        style="width:80px"
      >
        1825-03-04
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`basic tests Render plain table with custom headerComponent 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <span>
          Test
        </span>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:140px"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:120px"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:80px"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width:80px"
      >
        1
      </td>
      <td
        style="width:140px"
      >
        George Washington
      </td>
      <td
        style="width:120px"
      >
        No Party
      </td>
      <td
        style="width:80px"
      >
        1732
      </td>
      <td
        style="width:80px"
      >
        1799
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1789-04-30
      </td>
      <td
        style="width:80px"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        2
      </td>
      <td
        style="width:140px"
      >
        John Adams
      </td>
      <td
        style="width:120px"
      >
        Federalist
      </td>
      <td
        style="width:80px"
      >
        1735
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1797-03-04
      </td>
      <td
        style="width:80px"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        3
      </td>
      <td
        style="width:140px"
      >
        Thomas Jefferson
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1743
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1801-03-04
      </td>
      <td
        style="width:80px"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        4
      </td>
      <td
        style="width:140px"
      >
        James Madison
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1751
      </td>
      <td
        style="width:80px"
      >
        1836
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1809-03-04
      </td>
      <td
        style="width:80px"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        5
      </td>
      <td
        style="width:140px"
      >
        James Monroe
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1758
      </td>
      <td
        style="width:80px"
      >
        1831
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1817-03-04
      </td>
      <td
        style="width:80px"
      >
        1825-03-04
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`basic tests Render plain table with custom tdComponent 1`] = `
Array [
  <span>
    1
  </span>,
  <span>
    George Washington
  </span>,
  <span>
    No Party
  </span>,
  <span>
    1732
  </span>,
  <span>
    1799
  </span>,
  <span>
    1789-04-30
  </span>,
  <span>
    1797-03-04
  </span>,
  <span>
    2
  </span>,
  <span>
    John Adams
  </span>,
  <span>
    Federalist
  </span>,
  <span>
    1735
  </span>,
  <span>
    1826
  </span>,
  <span>
    1797-03-04
  </span>,
  <span>
    1801-03-04
  </span>,
  <span>
    3
  </span>,
  <span>
    Thomas Jefferson
  </span>,
  <span>
    Democratic-Republican
  </span>,
  <span>
    1743
  </span>,
  <span>
    1826
  </span>,
  <span>
    1801-03-04
  </span>,
  <span>
    1809-03-04
  </span>,
  <span>
    4
  </span>,
  <span>
    James Madison
  </span>,
  <span>
    Democratic-Republican
  </span>,
  <span>
    1751
  </span>,
  <span>
    1836
  </span>,
  <span>
    1809-03-04
  </span>,
  <span>
    1817-03-04
  </span>,
  <span>
    5
  </span>,
  <span>
    James Monroe
  </span>,
  <span>
    Democratic-Republican
  </span>,
  <span>
    1758
  </span>,
  <span>
    1831
  </span>,
  <span>
    1817-03-04
  </span>,
  <span>
    1825-03-04
  </span>,
  <table>
    <thead>
      <tr>
        <th
          style="text-align:left;white-space:nowrap;width:80px"
        >
          <div>
            number
          </div>
        </th>
        <th
          style="text-align:left;white-space:nowrap;width:140px"
        >
          <div>
            name
          </div>
        </th>
        <th
          style="text-align:left;white-space:nowrap;width:120px"
        >
          <div>
            party
          </div>
        </th>
        <th
          style="text-align:left;white-space:nowrap;width:80px"
        >
          <div>
            birth_year
          </div>
        </th>
        <th
          style="text-align:left;white-space:nowrap;width:80px"
        >
          <div>
            death_year
          </div>
        </th>
        <th
          style="text-align:right;white-space:nowrap;width:80px"
        >
          <div>
            took_office
          </div>
        </th>
        <th
          style="text-align:left;white-space:nowrap;width:80px"
        >
          <div>
            left_office
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr />
      <tr />
      <tr />
      <tr />
      <tr />
    </tbody>
  </table>,
]
`;

exports[`basic tests Render plain table with custom valueComponent 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:140px"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:120px"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:80px"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width:80px"
      >
        <span>
          1
        </span>
      </td>
      <td
        style="width:140px"
      >
        George Washington
      </td>
      <td
        style="width:120px"
      >
        No Party
      </td>
      <td
        style="width:80px"
      >
        1732
      </td>
      <td
        style="width:80px"
      >
        1799
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1789-04-30
      </td>
      <td
        style="width:80px"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <span>
          2
        </span>
      </td>
      <td
        style="width:140px"
      >
        John Adams
      </td>
      <td
        style="width:120px"
      >
        Federalist
      </td>
      <td
        style="width:80px"
      >
        1735
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1797-03-04
      </td>
      <td
        style="width:80px"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <span>
          3
        </span>
      </td>
      <td
        style="width:140px"
      >
        Thomas Jefferson
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1743
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1801-03-04
      </td>
      <td
        style="width:80px"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <span>
          4
        </span>
      </td>
      <td
        style="width:140px"
      >
        James Madison
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1751
      </td>
      <td
        style="width:80px"
      >
        1836
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1809-03-04
      </td>
      <td
        style="width:80px"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <span>
          5
        </span>
      </td>
      <td
        style="width:140px"
      >
        James Monroe
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1758
      </td>
      <td
        style="width:80px"
      >
        1831
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1817-03-04
      </td>
      <td
        style="width:80px"
      >
        1825-03-04
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`basic tests Render plain table with wrapper 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:140px"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:120px"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:80px"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          1
        </b>
      </td>
      <td
        style="width:140px"
      >
        George Washington
      </td>
      <td
        style="width:120px"
      >
        No Party
      </td>
      <td
        style="width:80px"
      >
        1732
      </td>
      <td
        style="width:80px"
      >
        1799
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1789-04-30
      </td>
      <td
        style="width:80px"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          2
        </b>
      </td>
      <td
        style="width:140px"
      >
        John Adams
      </td>
      <td
        style="width:120px"
      >
        Federalist
      </td>
      <td
        style="width:80px"
      >
        1735
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1797-03-04
      </td>
      <td
        style="width:80px"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          3
        </b>
      </td>
      <td
        style="width:140px"
      >
        Thomas Jefferson
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1743
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1801-03-04
      </td>
      <td
        style="width:80px"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          4
        </b>
      </td>
      <td
        style="width:140px"
      >
        James Madison
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1751
      </td>
      <td
        style="width:80px"
      >
        1836
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1809-03-04
      </td>
      <td
        style="width:80px"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          5
        </b>
      </td>
      <td
        style="width:140px"
      >
        James Monroe
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1758
      </td>
      <td
        style="width:80px"
      >
        1831
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1817-03-04
      </td>
      <td
        style="width:80px"
      >
        1825-03-04
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`basic tests Render plain table with wrapper func 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          number
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:140px"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:120px"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="text-align:right;white-space:nowrap;width:80px"
      >
        <div>
          took_office
        </div>
      </th>
      <th
        style="text-align:left;white-space:nowrap;width:80px"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          1
        </b>
      </td>
      <td
        style="width:140px"
      >
        George Washington
      </td>
      <td
        style="width:120px"
      >
        No Party
      </td>
      <td
        style="width:80px"
      >
        1732
      </td>
      <td
        style="width:80px"
      >
        1799
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1789-04-30
      </td>
      <td
        style="width:80px"
      >
        1797-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          2
        </b>
      </td>
      <td
        style="width:140px"
      >
        John Adams
      </td>
      <td
        style="width:120px"
      >
        Federalist
      </td>
      <td
        style="width:80px"
      >
        1735
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1797-03-04
      </td>
      <td
        style="width:80px"
      >
        1801-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          3
        </b>
      </td>
      <td
        style="width:140px"
      >
        Thomas Jefferson
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1743
      </td>
      <td
        style="width:80px"
      >
        1826
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1801-03-04
      </td>
      <td
        style="width:80px"
      >
        1809-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          4
        </b>
      </td>
      <td
        style="width:140px"
      >
        James Madison
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1751
      </td>
      <td
        style="width:80px"
      >
        1836
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1809-03-04
      </td>
      <td
        style="width:80px"
      >
        1817-03-04
      </td>
    </tr>
    <tr>
      <td
        style="width:80px"
      >
        <b>
          5
        </b>
      </td>
      <td
        style="width:140px"
      >
        James Monroe
      </td>
      <td
        style="width:120px"
      >
        Democratic-Republican
      </td>
      <td
        style="width:80px"
      >
        1758
      </td>
      <td
        style="width:80px"
      >
        1831
      </td>
      <td
        style="width:80px;text-align:right"
      >
        1817-03-04
      </td>
      <td
        style="width:80px"
      >
        1825-03-04
      </td>
    </tr>
  </tbody>
</table>
`;
